banner, about me and my recipie added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Food Network</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <section class="top-banner flex-container">
+      <div class="half-width banner-content">
+        <h1><span class="orange-color">Skip</span> The Diet,</h1>
+        <h1>Just Eat Healthy</h1>
+        <h1>With Food Network</h1>
+        <p>
+          Imagine you don't need a diet because we provide <br />
+          healthy and delicious food for you!
+        </p>
+        <a href="#" class="link-button" target="_blank">Order Food</a>
+      </div>
+      <div class="half-width">
+        <img src="images/female/Group 8425.png" alt="Fit Girl" />
+      </div>
+    </section>
+
+    <section class="about-me">
+      <div class="flex-container">
+       <div class="half-width">
+        <img src="images/female/Person Image.png" id="about-me-img" alt="Person Image" />
+      </div>
+
+      <div class="half-width about-me-content">
+        <h1>About Me</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing<br>
+           elit. Condimentum diam orci pretium a pharetra,<br> feugiat cursus. Dictumst risus, sem
+          egestas odio cras <br>adipiscing vulputate. Nisi, risus in suscipit non.<br>
+          Non commodo volutpat, pharetra, vel.
+        </p>
+        <a href="#" target="_blank" class="link-button">Contact me</a>
+      </div>
+      </div>
+    </section>
+    <section class="my-recipies">
+        <div class="heading">
+            <h1>My recipies</h1>
+            <p>Substituting white rice with brown rice or fried rice after 3:00pm<br>
+             will be 200TK for a pint and 250TK for a quart.</p>
+        </div>
+        <div class="flex-container">
+            <div class="three-row-content">
+                <img src="images/food/food1.jpg" alt="Recipie">
+                <h2>Szechuan Soft Won Ton</h2>
+                <p>soft won tons filled with chicken, with garlic sauce</p>
+            </div>
+            <div class="three-row-content">
+                <img src="images/food/food2.jpg" alt="Recipie">
+                <h2>Steamed (or Pan Fried) Vegetable Dumplings</h2>
+                <p>house-made dough dumpling with carrot, mushroom, cellophane noodles, cabbage (6 pieces)</p>
+            </div>
+            <div class="three-row-content">
+                <img src="images/food/food3.jpg" alt="Recipie">
+                <h2>Fried Silky Tofu with Special Garlic Sauce</h2>
+                <p>4 large tofu cubes, breaded and deep-fried, with garlic sauce on the side</p>
+            </div>
+        </div>
+
+    </section>
+  </body>
 </html>
