about me updated, social media achievement and footer added

--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
       <div class="half-width about-me-content">
         <h1>About Me</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing<br>
-           elit. Condimentum diam orci pretium a pharetra,<br> feugiat cursus. Dictumst risus, sem
-          egestas odio cras <br>adipiscing vulputate. Nisi, risus in suscipit non.<br>
-          Non commodo volutpat, pharetra, vel.
+          I am Jenifer Lorrence. Welcome to my restaurant website. <br> 
+          I am the owner of this restaurant and hotel.<br>
+          We serve healthy and delicious foods. We are giving<br> 
+          best quality foods since 2011. You will find all italian<br>
+           and chinese foods here.
         </p>
         <a href="#" target="_blank" class="link-button">Contact me</a>
       </div>
@@ -71,7 +72,26 @@
                 <p>4 large tofu cubes, breaded and deep-fried, with garlic sauce on the side</p>
             </div>
         </div>
-
     </section>
+    <section class="social-media-accievement">
+       <div class="social-item">
+         <h1>700k</h1>
+          <p>Youtube Subscribers</p>
+       </div>
+       <div class="social-item">
+         <h1>2.4m</h1>
+          <p>Instagram Followers</p>
+       </div>
+       <div class="social-item">
+         <h1>100k</h1>
+          <p>Dribbble Shot Likes</p>
+       </div>
+    </section>
+
+
+    <footer>
+      <h1><span class="orange-color">FOOD</span><span class="gray-color"> NETWORK</span></h1>
+      <p>Eat healthy to live healthy. Live healthy to live happy</p>
+    </footer>
   </body>
 </html>
