--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="style.css" />
     <title>Food Network</title>
   </head>
@@ -32,65 +31,75 @@
 
     <section class="about-me">
       <div class="flex-container">
-       <div class="half-width">
-        <img src="images/female/Person Image.png" id="about-me-img" alt="Person Image" />
-      </div>
+        <div class="half-width">
+          <img src="images/female/Person Image.png" id="about-me-img" alt="Person Image"/>
+        </div>
 
-      <div class="half-width about-me-content">
-        <h1>About Me</h1>
-        <p>
-          I am Jenifer Lorrence. Welcome to my restaurant website. <br> 
-          I am the owner of this restaurant and hotel.<br>
-          We serve healthy and delicious foods. We are giving<br> 
-          best quality foods since 2011. You will find all italian<br>
-           and chinese foods here.
-        </p>
-        <a href="#" target="_blank" class="link-button">Contact me</a>
-      </div>
+        <div class="half-width about-me-content">
+          <h1>About Me</h1>
+          <p>
+            I am Jenifer Lorrence. Welcome to my restaurant website. <br />
+            I am the owner of this restaurant and hotel.<br />
+            We serve healthy and delicious foods. We are giving<br />
+            best quality foods since 2011. You will find all italian<br />
+            and chinese foods here.
+          </p>
+          <a href="#" target="_blank" class="link-button">Contact me</a>
+        </div>
       </div>
     </section>
     <section class="my-recipies">
-        <div class="heading">
-            <h1>My recipies</h1>
-            <p>Substituting white rice with brown rice or fried rice after 3:00pm<br>
-             will be 200TK for a pint and 250TK for a quart.</p>
+      <div class="heading">
+        <h1>My recipies</h1>
+        <p>
+          Substituting white rice with brown rice or fried rice after 3:00pm<br />
+          will be 200TK for a pint and 250TK for a quart.
+        </p>
+      </div>
+      <div class="flex-container">
+        <div class="three-row-content">
+          <img src="images/food/food1.jpg" alt="Recipie" />
+          <h2>Szechuan Soft Won Ton</h2>
+          <p>soft won tons filled with chicken, with garlic sauce</p>
         </div>
-        <div class="flex-container">
-            <div class="three-row-content">
-                <img src="images/food/food1.jpg" alt="Recipie">
-                <h2>Szechuan Soft Won Ton</h2>
-                <p>soft won tons filled with chicken, with garlic sauce</p>
-            </div>
-            <div class="three-row-content">
-                <img src="images/food/food2.jpg" alt="Recipie">
-                <h2>Steamed (or Pan Fried) Vegetable Dumplings</h2>
-                <p>house-made dough dumpling with carrot, mushroom, cellophane noodles, cabbage (6 pieces)</p>
-            </div>
-            <div class="three-row-content">
-                <img src="images/food/food3.jpg" alt="Recipie">
-                <h2>Fried Silky Tofu with Special Garlic Sauce</h2>
-                <p>4 large tofu cubes, breaded and deep-fried, with garlic sauce on the side</p>
-            </div>
+        <div class="three-row-content">
+          <img src="images/food/food2.jpg" alt="Recipie" />
+          <h2>Steamed (or Pan Fried) Vegetable Dumplings</h2>
+          <p>
+            house-made dough dumpling with carrot, mushroom, cellophane noodles,
+            cabbage (6 pieces)
+          </p>
         </div>
+        <div class="three-row-content">
+          <img src="images/food/food3.jpg" alt="Recipie" />
+          <h2>Fried Silky Tofu with Special Garlic Sauce</h2>
+          <p>
+            4 large tofu cubes, breaded and deep-fried, with garlic sauce on the
+            side
+          </p>
+        </div>
+      </div>
     </section>
     <section class="social-media-accievement">
-       <div class="social-item">
-         <h1>700k</h1>
-          <p>Youtube Subscribers</p>
-       </div>
-       <div class="social-item">
-         <h1>2.4m</h1>
-          <p>Instagram Followers</p>
-       </div>
-       <div class="social-item">
-         <h1>100k</h1>
-          <p>Dribbble Shot Likes</p>
-       </div>
+      <div class="social-item">
+        <h1>700k</h1>
+        <p>Youtube Subscribers</p>
+      </div>
+      <div class="social-item">
+        <h1>2.4m</h1>
+        <p>Instagram Followers</p>
+      </div>
+      <div class="social-item">
+        <h1>100k</h1>
+        <p>Dribbble Shot Likes</p>
+      </div>
     </section>
 
-
     <footer>
-      <h1><span class="orange-color">FOOD</span><span class="gray-color"> NETWORK</span></h1>
+      <h1>
+        <span class="orange-color">FOOD</span
+        ><span class="gray-color"> NETWORK</span>
+      </h1>
       <p>Eat healthy to live healthy. Live healthy to live happy</p>
     </footer>
   </body>
